fixed scrollbar behavior

--- a/packages/client/src/app/components/Chat/style.css
+++ b/packages/client/src/app/components/Chat/style.css
@@ -2,10 +2,16 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  overflow-y: scroll;
 }
 .chat > :first-child {
   margin-top: auto !important;
+}
+
+.chat-wrapper {
+  flex: 1;
+  display: flex;
+  flex-direction: column-reverse;
+  overflow-y: scroll;
 }
 
 .message {
